fix: Removed horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   background-attachment: fixed;
   background-position: center center;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .wrapper,
